--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
 app:
-    resource: "@AppBundle/Controller/"
+    resource: "@ApplianceBundle/Controller/DefaultController.php"
     type:     annotation
